pin pester version

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,8 @@ install:
       #Import-Module PowerShellGet -Force
       Get-PackageProvider -Name NuGet -ForceBootstrap
       Install-Module PSScriptAnalyzer -MaximumVersion 1.18.2 -force -AllowClobber -SkipPublisherCheck -Scope CurrentUser
-      install-module pester,PlatyPS -force -AllowClobber -SkipPublisherCheck -Scope CurrentUser
+      Install-Module pester -MaximumVersion 4.10.1 -force -AllowClobber -SkipPublisherCheck -Scope CurrentUser
+      install-module PlatyPS -force -AllowClobber -SkipPublisherCheck -Scope CurrentUser
   - pwsh: |
       import-module powershellget
       # cannot update and use new version in the same process
@@ -40,7 +41,8 @@ install:
       #Import-Module PowerShellGet -Force
       Get-PackageProvider -Name NuGet -ForceBootstrap
       Install-Module PSScriptAnalyzer -MaximumVersion 1.18.2 -force -AllowClobber -SkipPublisherCheck -Scope CurrentUser
-      install-module pester,PlatyPS -force -AllowClobber -SkipPublisherCheck -Scope CurrentUser
+      Install-Module pester -MaximumVersion 4.10.1 -force -AllowClobber -SkipPublisherCheck -Scope CurrentUser
+      install-module PlatyPS -force -AllowClobber -SkipPublisherCheck -Scope CurrentUser
 build_script:
   - pwsh: |
       if( $env:APPVEYOR_REPO_BRANCH -in @("master","preview") -and !$env:APPVEYOR_PULL_REQUEST_NUMBER -and $env:APPVEYOR_REPO_COMMIT_MESSAGE -notlike "skip: *" ) {
